Fix toggleButton to align with other navbar elements (#194)

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -109,6 +109,8 @@ header {
 
 #toggleButton {
   margin-right: 1rem;
+  margin-top: 0.5rem;
+  padding: 0.5rem;
 }
 
 .search-container {
